--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Fighter</title>
 </head>
 <body>
 
-<canvas id="canvas"></canvas>
+<div class="container">
+    <div class="health_timer_container">
+        <!--  player health  -->
+        <div id="player_health_bar" class="health_bar"></div>
+
+        <!--  timer  -->
+        <div id="timer" class="timer"></div>
+
+        <!--  enemy health  -->
+        <div id="enemy_health_bar" class="health_bar"></div>
+    </div>
+
+    <canvas id="canvas"></canvas>
+</div>
 
 <script src="index.js"></script>
 </body>
