Determine winner functionality

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <!--  timer  -->
-        <div id="timer" class="timer"></div>
+        <div id="timer" class="timer">60</div>
 
         <!--  enemy health  -->
         <div class="health_bar_container_right">
@@ -27,6 +27,8 @@
             <div id="enemy_health_bar" class="health_bar_right"></div>
         </div>
     </div>
+
+    <div id="winner_label" class="winner_label">Temp</div>
 
     <canvas id="canvas"></canvas>
 </div>
