Separated cod in utils.js, fighter.js, sprite.js, added sprites pngs

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!--  Links  -->
     <link rel="stylesheet" href="/css/style.css">
+    <!--    -->
+
     <title>Fighter</title>
 </head>
 <body>
 
 <div class="container">
+
     <div class="health_timer_container">
+
         <!--  player health  -->
         <div class="health_bar_container_left">
             <div class="health_bar_background_left"></div>
@@ -33,6 +39,12 @@
     <canvas id="canvas"></canvas>
 </div>
 
+<!--  js  -->
+<script src="js/classes/sprite.js"></script>
+<script src="js/classes/fighter.js"></script>
+<script src="js/modules/utils.js"></script>
 <script src="index.js"></script>
+<!--    -->
+
 </body>
 </html>
